# Profile-guided-Fuzzing

./: README.md
AFL/: .gitignore  Dockerfile.AFL  afl-fuzz.c  fd.h
AFL/benchmarks/: varVSallVar.txt  var_info.txt
AFL/benchmarks/binutils-2.38/: Dockerfile  README.md  build.sh
AFL/benchmarks/djpeg/: profiling.txt
AFL/benchmarks/libxml2/: profiling.txt
AFL/benchmarks/mupdf/: 2profiling.txt  profiling.txt
AFL/benchmarks/optipng/: profiling.txt
AFL/benchmarks/quickjs/: profiling.txt
AFL/benchmarks/readelf/: profiling.txt
AFL/benchmarks/tcpdump/: README.md  profiling.txt
AFL/benchmarks/tidy/: profiling.txt
AFL/benchmarks/tiff2ps/: profiling.txt
AFL/benchmarks/unrtf/: profiling.txt
AFL/benchmarks/woff2/: profiling.txt
AFL/gcc_mode/glibc/: README.md
AFL/llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
AFL/var_mode/: var_empty.c
AFLplusplus/: .gitmodules  Dockerfile.afl++  Dockerfile_exp.afl++  Dockerfile_per.afl++  GNUmakefile  GNUmakefile.llvm  GNUmakefile.per
AFLplusplus/include/: afl-fuzz.h  envs.h  fd.h  forkserver.h  sharedmem.h
AFLplusplus/instrumentation/: afl-compiler-rt.o.c  afl-llvm-pass.so.cc  afl-llvm-var-rec.so.cc
AFLplusplus/src/: afl-cc.c  afl-forkserver.c  afl-fuzz-init.c  afl-fuzz-one.c  afl-fuzz-queue.c  afl-fuzz-run.c  afl-fuzz-state.c  afl-fuzz-stats.c  afl-fuzz.c
abstractFS/: .gitignore  CMakeLists.txt  LICENSE  README.md
abstractFS/scripts/: eval-AFL-queue.sh
abstractFS/src/: common.h  debug.h  fcache.c  fcache.h  fd.h  fs_rt.c  fs_rt.h
abstractFS/src/examples/: sample.c
(+58 files in other folders)
